<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:columnCount="3">

        <TextView
            android:id="@+id/one"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:tag="@string/one"
            android:text="@string/one"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/one"/>

        <TextView
            android:id="@+id/two"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:tag="@string/two"
            android:text="@string/two"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/two"/>

        <TextView
            android:id="@+id/three"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/three"
            android:tag="@string/three"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/three"/>

        <TextView
            android:id="@+id/four"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/four"
            android:tag="@string/four"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/four"/>

        <TextView
            android:id="@+id/five"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/five"
            android:tag="@string/five"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/five"/>

        <TextView
            android:id="@+id/six"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/six"
            android:tag="@string/six"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/six"/>

        <TextView
            android:id="@+id/seven"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:tag="@string/seven"
            android:onClick="numberClick"
            android:text="@string/seven"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/seven"/>

        <TextView
            android:id="@+id/eight"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/eight"
            android:tag="@string/eight"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/eight"/>

        <TextView
            android:id="@+id/nine"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/nine"
            android:tag="@string/nine"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/nine"/>

        <TextView
            android:id="@+id/canc_all"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="cancAllClick"
            android:text="@string/canc_all"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/delete_all"/>

        <TextView
            android:id="@+id/zero"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="numberClick"
            android:text="@string/zero"
            android:tag="@string/zero"
            android:textColor="@color/selector_color_text"
            android:textSize="30sp"
            android:contentDescription="@string/zero"/>

        <TextView
            android:id="@+id/canc"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="top"
            android:onClick="cancClick"
            android:paddingLeft="15dp"
            android:text="@string/canc"
            android:textColor="@color/selector_color_text"
            android:textSize="35sp"
            android:contentDescription="@string/delete_last"/>

        <TextView
            android:id="@+id/ok"
            style="@style/NumberText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:background="@drawable/selector_textview"
            android:clickable="true"
            android:gravity="center"
            android:onClick="okClick"
            android:text="@string/ok"
            android:textColor="@color/selector_color_text"
            android:textSize="24sp"
            android:contentDescription="@string/ok"/>
    </GridLayout>

</RelativeLayout>